Fri Nov 28 11:07:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/ace/HTBP/HTBP_Session.cpp:
        * tests/Basic_Types_Test.cpp:
          Layout change

Fri Nov 28 11:05:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/ASX/Event_Server/Event_Server/Options.cpp
        * examples/ASX/UPIPE_Event_Server/Options.cpp
          Use new ascii format specifier

Fri Nov 28 11:04:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * contribs/FaCE/CE_ARGV.H:
          Doxygen change

Fri Nov 28 11:03:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * appsJAWS/clients/Blobby/Blob_Handler.cpp:
          Use new ascii format specifier

Fri Nov 28 11:03:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.txt:
          Updated for next micro release and corrected links for the
          nslist/nsdel/nsadd/catior

        * rpmbuild/ace-tao.spec:
          Updated for next micro release

Fri Nov 28 10:59:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Arg_Shifter.h:
        * ace/Argv_Type_Converter.h:
        * ace/Event_Handler_T.h:
        * ace/OS_Errno.h:
        * ace/OS_NS_stropts.h:
        * ace/SOCK_Dgram_Mcast.h:
        * ace/SSL/SSL_Context.h:
          Doxygen fix

        * ace/Basic_Types.h:
        * ace/config-linux-common.h:
        * ace/config-macosx-leopard.h:
        * ace/config-macosx-panther.h:
        * ace/config-macosx-tiger.h:
        * ace/config-macosx.h:
        * ace/config-netbsd.h:
        * ace/config-sunos5.10.h:
        * ace/config-tandem-nsk-mips-v2.h:
        * ace/config-tandem-nsk-mips-v3.h:
        * ace/config-win32-borland.h:
        * ace/config-win32-ghs.h:
        * ace/config-win32-mingw.h:
        * ace/config-win32-msvc.h:
          Added _ASCII versions of all existing format specifiers.
          The existing ones are then defined using these ASCII ones.